--- a/saarthi.css
+++ b/saarthi.css
@@ -28,7 +28,6 @@ body, h1, h2, p, ul, li {
     left: 0;
     z-index: 100;
   }
-  
   nav ul {
     display: flex;
     list-style: none;
@@ -256,4 +255,20 @@ body, h1, h2, p, ul, li {
   .nav-links a:hover {
     color: #ff5e5e;
   }
-        
+.video{
+ position: absolute;
+ top: 0;
+ bottom: 0;
+ z-index: 1;
+}
+.hero{
+  color:white;
+  position: absolute;
+  top: 600px;
+  bottom: 0;
+  z-index: 2;
+}
+.logo{
+  width: 800px;
+  height: 100px;
+}
