--- a/saarthi.css
+++ b/saarthi.css
@@ -183,7 +183,11 @@ body, h1, h2, p, ul, li {
   
   form {
     background-color: #f5f5f5;
-    padding: 20px;
+    font-size: large;
+    padding-right: 100px;
+    padding-left: 100px;
+    padding-top: 50px;
+    padding-bottom: 50px;
     border-radius: 5px;
   }
   
