--- a/saarthi.css
+++ b/saarthi.css
@@ -109,19 +109,20 @@ body, h1, h2, p, ul, li {
   
   .services-list {
     display: flex;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     justify-content: center;
     margin-top: 40px;
   }
   
   .service {
     flex-basis: 300px;
-    margin: 20px;
+    margin: 10px;
     padding: 20px;
     background-color: #fff;
     text-align: center;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    align-items: center;
   }
   
   .service img {
@@ -240,7 +241,8 @@ body, h1, h2, p, ul, li {
   }
   
   .logo img {
-    max-width: 150px;
+    max-width: 250px;
+
   }
   
   .nav-links {
