--- a/saarthi.css
+++ b/saarthi.css
@@ -234,7 +234,9 @@ body, h1, h2, p, ul, li {
     align-items: center;
     justify-content: space-between;
   }
-  
+  .popup {
+    
+  }
   .logo img {
     max-width: 150px;
   }
