--- a/saarthi.css
+++ b/saarthi.css
@@ -53,6 +53,7 @@ body, h1, h2, p, ul, li {
     text-align: center;
   }
   
+
   .hero {
     max-width: 800px;
     margin: 0 auto;
@@ -143,10 +144,20 @@ body, h1, h2, p, ul, li {
     color: #666;
   }
   #about {
-    padding: 80px 0;
+    background-image: url("./pari.png");
+    background-size: cover;
+    /* background-blend-mode:luminosity; */
+    position:static;
+    width: 100%;
+    padding: 100px 0;
     background-color: #f5f5f5;
   }
-  
+  #about  h2{
+    color: #f3eeee; 
+  }
+  #about p{
+    color:white;
+  }
   .about-content {
     display: flex;
     flex-wrap: wrap;
