--- a/saarthi.css
+++ b/saarthi.css
@@ -292,3 +292,18 @@ body, h1, h2, p, ul, li {
   width: 800px;
   height: 100px;
 }
+.button{
+  border:0;
+  font-size: 20px;
+  padding:20px;
+  border-radius: 10px;
+  background: linear-gradient(145deg, #e65555, #ff6565);
+  box-shadow:  19px 19px 37px #b54343,
+               -19px -19px 37px #ff7979;
+}
+.button:hover{
+  font-size: 25px;
+  background: linear-gradient(145deg, #ff6565, #e65555);
+  box-shadow:  19px 19px 37px #b54343,
+              -19px -19px 37px #ff7979;
+}
