--- a/bookingandpricing.css
+++ b/bookingandpricing.css
@@ -138,10 +138,32 @@ body, h1, h2, h3, p, ul, li, input, textarea, button {
     color: #000;
     box-shadow: 0px 87px 78px -39px rgba(0,0,0,0.4);
   }
-  
+  .container1 {
+  max-width: 960px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
   .header {
     text-align: center;
     margin-top: 0.75rem;
+  }
+  .nav-links {
+    list-style: none;
+    display: flex;
+    gap: 20px;
+  }
+  
+  .nav-links a {
+    text-decoration: none;
+    color: #333;
+    font-weight: bold;
+    font-size: 16px;
+  }
+  
+  .nav-links a:hover {
+    color: #ff5e5e;
   }
   
   .plan-chooser .title {
