--- a/saarthi.css
+++ b/saarthi.css
@@ -144,11 +144,10 @@ body, h1, h2, p, ul, li {
     color: #666;
   }
   #about {
-    background-image: url("./pari.png");
     background-size: cover;
-    /* background-blend-mode:luminosity; */
     position:static;
     width: 100%;
+    height: auto;
     padding: 100px 0;
     background-color: #f5f5f5;
   }
