--- a/bookingandpricing.css
+++ b/bookingandpricing.css
@@ -127,7 +127,7 @@ body, h1, h2, h3, p, ul, li, input, textarea, button {
   }
   .open-popup{
     visibility: visible;
-    top: 50%;
+    top: 75%;
     transform: translate(-50%,-50%) scale(1);
   }
   .plan-chooser {
@@ -136,7 +136,7 @@ body, h1, h2, h3, p, ul, li, input, textarea, button {
     border-radius: 10px;
     padding: 20px;
     color: #000;
-    box-shadow: 0px 87px 78px -39px rgba(0,0,0,0.4);
+    box-shadow: 20px 87px 78px 20px rgba(0,0,0,0.4);
   }
   .container1 {
   max-width: 960px;
@@ -240,7 +240,7 @@ body, h1, h2, h3, p, ul, li, input, textarea, button {
     align-items: center;
     justify-content: center;
     border-radius: 0.375rem;
-    background-color: rgba(37, 99, 235, 1);
+    background-color: #ff5e5e;
     padding: 1rem 3rem;
     font-weight: 600;
     color: #fff;
@@ -253,4 +253,75 @@ body, h1, h2, h3, p, ul, li, input, textarea, button {
   
   .plan-option input {
     display: none;
+  }
+  .subscribe {
+    position: relative;
+    height: 530px;
+    width: 500px;
+    padding: 20px;
+    background-color: #FFF;
+    border-radius: 4px;
+    color: #333;
+    box-shadow: 25px 25px 60px 30px rgba(0, 0, 0, 0.4);
+  }
+  
+  .subscribe:after {
+    position: absolute;
+    content: "";
+    right: -10px;
+    bottom: 18px;
+    width: 0;
+    height: 0;
+    border-left: 0px solid transparent;
+    border-right: 10px solid transparent;
+    border-bottom: 10px solid #07013d;
+  }
+  
+  .subscribe p {
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    letter-spacing: 4px;
+    line-height: 28px;
+  }
+  
+  .subscribe input {
+    bottom: 30px;
+    border: none;
+    border-bottom: 1px solid #d4d4d4;
+    padding: 20px;
+    width: 82%;
+    background: transparent;
+    transition: all .25s ease;
+    font-size: 20px;
+  }
+  
+  .subscribe input:focus {
+    outline: none;
+    border-bottom: 1px solid #07013d;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', 'sans-serif';
+  }
+  
+  .subscribe .submit-btn {
+    position: absolute;
+    border-radius: 30px;
+    border-bottom-right-radius: 0;
+    border-top-right-radius: 0;
+    background-color: #ff5e5e;
+    color: #FFF;
+    padding: 20px 25px;
+    display: inline-block;
+    font-size: 24px;
+    font-weight: bold;
+    letter-spacing: 5px;
+    right: -10px;
+    bottom: -20px;
+    cursor: pointer;
+    transition: all .25s ease;
+    box-shadow: -5px 6px 20px 0px rgba(26, 26, 26, 0.4);
+  }
+  
+  .subscribe .submit-btn:hover {
+    background-color: black;
+    box-shadow: -5px 6px 20px 0px rgba(88, 88, 88, 0.569);
   }
