--- a/saarthi.css
+++ b/saarthi.css
@@ -357,3 +357,57 @@ body, h1, h2, p, ul, li {
   filter: blur(10px);
   transform: scale(0.9, 0.9);
 }
+.drivercard {
+  position: relative;
+  width: 320px;
+  height: 320px;
+  background: #ff5e5e;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 25px;
+  font-weight: bold;
+  border-radius: 15px;
+  cursor: pointer;
+}
+
+.drivercard::before,
+.drivercard::after {
+  position: absolute;
+  content: "";
+  width: 20%;
+  height: 20%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 25px;
+  font-weight: bold;
+  background-color: #fe8a8a;
+  transition: all 0.5s;
+}
+
+.drivercard::before {
+  top: 0;
+  right: 0;
+  border-radius: 0 15px 0 100%;
+}
+
+.drivercard::after {
+  bottom: 0;
+  left: 0;
+  border-radius: 0 100%  0 15px;
+}
+
+.drivercard:hover::before,
+.drivercard:hover:after {
+  width: 100%;
+  height: 100%;
+  border-radius: 15px;
+  transition: all 0.5s;
+}
+
+.drivercard:hover:after {
+  content: "Roshini Raut";
+  content: "Experience: 3years";
+  content:"Rating: 4.5/5.0";
+} 
