--- a/saarthi.css
+++ b/saarthi.css
@@ -323,8 +323,7 @@ body, h1, h2, p, ul, li {
   padding: 10px;
   font-size: 40px;
 }
-<<<<<<< HEAD
-=======
+
 .button:hover{
   font-size: 25px;
   background: linear-gradient(145deg, #ff6565, #e65555);
@@ -433,7 +432,53 @@ body, h1, h2, p, ul, li {
 
 .drivercard:hover:after {
   content: "Roshini Raut";
-  content: "Experience: 3years";
-  content:"Rating: 4.5/5.0";
 } 
->>>>>>> cab33f01cf5e723f833079ff943228a60a1bde9d
+
+.btn {
+  font-size: 17px;
+  background: transparent;
+  border: none;
+  padding: 1em 1.5em;
+  color: #ff5e5e;
+  text-transform: uppercase;
+  position: relative;
+  transition: .5s ease;
+}
+
+.btn::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 2px;
+  width: 0;
+  background-color: grey;
+  transition: .5s ease;
+}
+
+.btn:hover {
+  color: #f5f5f5;
+  transition-delay: .5s;
+}
+
+.btn:hover::before {
+  width: 100%;
+}
+
+.btn::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 0;
+  width: 100%;
+  background-color: #ff5e5e;
+  transition: .4s ease;
+  z-index: -1;
+}
+
+.btn:hover::after {
+  height: 100%;
+  transition-delay: 0.4s;
+  color: aliceblue;
+}
