--- a/saarthi.css
+++ b/saarthi.css
@@ -388,6 +388,7 @@ body, h1, h2, p, ul, li {
   height: 254px;
   perspective: 1000px;
   font-family: sans-serif;
+  cursor: pointer;
 }
 
 .title {
@@ -446,6 +447,7 @@ body, h1, h2, p, ul, li {
   text-transform: uppercase;
   position: relative;
   transition: .5s ease;
+  cursor: pointer;
 }
 
 .btn::before {
@@ -484,4 +486,53 @@ body, h1, h2, p, ul, li {
   height: 100%;
   transition-delay: 0.4s;
   color: aliceblue;
+}
+.pop {
+  width: 400px;
+  background: #fff;
+  border-radius: 6px;
+  position:absolute;
+  top:0;
+  left:50%;
+  transform: translate(-50%,-50%) scale(0.1);
+  visibility: hidden;
+  text-align: center;
+  padding:0 30px 30px;
+  color:black;
+  box-shadow: 0 5px 5px rgba(0,0,0,0.2);
+  transition: transform 0.4s, top 0.4s;
+}
+.pop img {
+  width: 100px;
+  margin-top: -50px;
+  border-radius: 50%;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+}
+.pop h2 {
+  font-size: 38px;
+  font-weight: 500;
+  margin: 30px 0 10px;
+}
+.popbutton{
+  width: 100%;
+  margin-top: 50px;
+  padding: 12px 24px;
+  background: #ff5e5e;
+  color:#fff;
+  border: 0;
+  text-decoration: none;
+  outline: none;
+  font-size: 18px;
+  border-radius: 5px;
+  cursor: pointer;
+  box-shadow: 0 5px 5px rgba(0,0,0,0.2);
+  transition: background-color 0.3s ease;
+}
+.popbutton:hover {
+  background-color: #e53c3c;
+}
+.pop-open{
+  visibility: visible;
+  top: 50%;
+  transform: translate(-50%,-50%) scale(1);
 }
