--- a/saarthi.css
+++ b/saarthi.css
@@ -566,3 +566,108 @@ body, h1, h2, p, ul, li {
   display: flex;
   justify-content: space-around;
 }
+.card {
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 20px;
+  width: 350px;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 20px 87px 78px 20px rgba(0,0,0,0.4);
+}
+
+.title {
+  font-size: 24px;
+  font-weight: 600;
+  text-align: center;
+  color: black;
+}
+
+.form {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.group {
+  position: relative;
+}
+
+.form .group label {
+  font-size: 14px;
+  color: rgb(99, 102, 102);
+  position: absolute;
+  top: -10px;
+  left: 10px;
+  background-color: #fff;
+  transition: all .3s ease;
+}
+
+.form .group input,
+.form .group textarea {
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  margin-bottom: 20px;
+  outline: 0;
+  width: 100%;
+  background-color: transparent;
+}
+
+.form .group input:placeholder-shown+ label, .form .group textarea:placeholder-shown +label {
+  top: 10px;
+  background-color: transparent;
+}
+
+.form .group input:focus,
+.form .group textarea:focus {
+  border-color: #3366cc;
+}
+
+.form .group input:focus+ label, .form .group textarea:focus +label {
+  top: -10px;
+  left: 10px;
+  background-color: #fff;
+  color: #3366cc;
+  font-weight: 600;
+  font-size: 14px;
+}
+
+.form .group textarea {
+  resize: none;
+  height: 100px;
+}
+
+.form button {
+  background-color: #ff5e5e;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.form button:hover {
+  background-color: #eb5252;
+}
+.commentpop{
+  width: 400px;
+  background: #fff;
+  border-radius: 6px;
+  position:absolute;
+  left:200px;
+  margin-top: 0px;
+  transform: translate(-50%,-50%) scale(0.1);
+  visibility: hidden;
+  text-align: center;
+  padding:0 30px 30px;
+  box-shadow: 20px 20px 20px rgba(0,0,0,0.2);
+  transition: transform 0.4s, margin-top 0.4s;
+}
+.open-comment{
+  visibility: visible;
+  margin-top: 30px;
+  transform: translate(-50%,-50%) scale(1);
+}
